--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p class="matrix__text">Психоматрица по дате рождения (Квадрат Пифагора)</p>
         <div class="wrapper matrix__wrapper">
             <div class="matrix__form">
-                <input class="matrix__input matrix_date" style="border-color: #ff0000; border-radius: 5px; placeholder="ЧЧ.ММ.ГГГГ" maxlength="10">
+                <input class="matrix__input matrix_date" style="border-color: #ff0000; border-radius: 5px;" placeholder="ЧЧ.ММ.ГГГГ" maxlength="10">
                 <div class="matrix__button_wrap"><button class="matrix__button" style="background-color: #ff0000; color: black">Рассчитать</button></div>
             </div>
             <div class="result">
