--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <link rel="apple-touch-icon" href="images/favicon/apple-touch-icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.4/datepicker.min.css">
     <link rel="stylesheet" type="text/css" href="https://onix-one.github.io/main.min.css" media="screen, projection, print">
+    <link rel="stylesheet" type="text/css" href="https://onix-one.github.io/bootstrap-grid.css" media="screen, projection, print">
+    <link rel="stylesheet" type="text/css" href="https://onix-one.github.io/bootstrap-reboot.css" media="screen, projection, print">
+    <link rel="stylesheet" type="text/css" href="https://onix-one.github.io/bootstrap.css" media="screen, projection, print">
 </head>
 <body>
-    <header class="social">
-    </header>
+<header class="social">
+</header>
+<div class="container">
     <div class="matrix">
         <h2 class="matrix__title">РАССЧИТАЙТe свою нумерологическую психоматрицу <span>прямо сейчас!</span></h2>
         <p class="matrix__text">Психоматрица по дате рождения (Квадрат Пифагора)</p>
@@ -54,7 +58,7 @@
                                     </div>
                                     <div class="result__item">
                                         <div class="result__context">
-                                            <h4>Удача</h4>
+                                            <h4 title="Все о удаче!">Удача</h4>
                                             <p data-index="6"> </p>
                                         </div>
                                     </div>
@@ -140,6 +144,7 @@
             </div>
         </div>
     </div>
+</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
     <script src="https://onix-one.github.io/main.min.js"></script>
