--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html lang="ru-RU">
 <head>
     <link rel="apple-touch-icon" href="images/favicon/apple-touch-icon.png">
@@ -14,7 +13,7 @@
         <div class="wrapper matrix__wrapper">
             <div class="matrix__form">
                 <input class="matrix__input matrix_date" style="border-color: #ff0000; border-radius: 5px;" placeholder="ЧЧ.ММ.ГГГГ" maxlength="10">
-                <div class="matrix__button_wrap"><button class="matrix__button" style="background-color: #ff0000; border-radius: 5px; color: black ">Рассчитать</button></div>
+                <div class="matrix__button_wrap" ><button class="matrix__button" style="background-color: #ff0000; color: black; border-radius: 5px; ">Рассчитать</button></div>
             </div>
             <div class="result">
                 <div class="result__loader">
