--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <p class="matrix__text"> </p>
                     <div class="result__wrap">
                         <div class="result__left">
-                            <div class="result__big" style="border-radius: 5px;">
+                            <div class="result__big">
                                 <div class="result__row result__flex">
                                     <div class="result__info">Дата рождения</div>
                                     <div class="result__answer" data-answer="date"> </div>
