--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <link rel="apple-touch-icon" href="images/favicon/apple-touch-icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.4/datepicker.min.css">
     <link rel="stylesheet" type="text/css" href="https://onix-one.github.io/main.min.css" media="screen, projection, print">
+    <link rel="stylesheet" type="text/css" href="https://onix-one.github.io/bootstrap-grid.css" media="screen, projection, print">
+    <link rel="stylesheet" type="text/css" href="https://onix-one.github.io/bootstrap-reboot.css" media="screen, projection, print">
+    <link rel="stylesheet" type="text/css" href="https://onix-one.github.io/bootstrap.css" media="screen, projection, print">
 </head>
 <body>
     <header class="social">
@@ -13,8 +16,8 @@
         <p class="matrix__text">Психоматрица по дате рождения (Квадрат Пифагора)</p>
         <div class="wrapper matrix__wrapper">
             <div class="matrix__form">
-                <input class="matrix__input matrix_date"  placeholder="ЧЧ.ММ.ГГГГ" maxlength="10">
-                <div class="matrix__button_wrap" ><button class="matrix__button">Рассчитать</button></div>
+                <input class="matrix__input matrix_date" placeholder="ЧЧ.ММ.ГГГГ" maxlength="10">
+                <div class="matrix__button_wrap"><button class="matrix__button">Рассчитать</button></div>
             </div>
             <div class="result">
                 <div class="result__loader">
