--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 
 <html lang="ru-RU">
 <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="apple-touch-icon" href="images/favicon/apple-touch-icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.4/datepicker.min.css">
     <link rel="stylesheet" type="text/css" href="https://onix-one.github.io/main.min.css" media="screen, projection, print">
