--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="social">
     </header>
     <div class="matrix">
-        <h2 class="matrix__title">РАССЧИТАЙТe свою нумерологическую психоматрицу <span>прямо сейчас!</span></h2>
+        <h2 class="matrix__title">Введите дату рождения и нажмите кнопку <span>РАССЧИТАТЬ</span></h2>
         <p class="matrix__text">Психоматрица по дате рождения (Квадрат Пифагора)</p>
         <div class="wrapper matrix__wrapper">
             <div class="matrix__form">
