--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="https://onix-one.github.io/bootstrap.css" media="screen, projection, print">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
-    <script src="https://onix-one.github.io/main.min.js"></script>
+    <script async src="https://onix-one.github.io/main.min.js"></script>
 </head>
 <body>
     <header class="social">
