--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <link rel="stylesheet" type="text/css" href="https://onix-one.github.io/bootstrap-grid.css" media="screen, projection, print">
     <link rel="stylesheet" type="text/css" href="https://onix-one.github.io/bootstrap-reboot.css" media="screen, projection, print">
     <link rel="stylesheet" type="text/css" href="https://onix-one.github.io/bootstrap.css" media="screen, projection, print">
-    <script async src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script async src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
-    <script async src="https://onix-one.github.io/main.min.js"></script>
 </head>
 <body>
     <header class="social">
@@ -147,5 +144,8 @@
             </div>
         </div>
     </div>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
+    <script defer src="https://onix-one.github.io/main.min.js"></script>
 </body>
 </html>
